namespace StatementProcessor
{
    interface IConverter
    {
        System.Data.DataSet Do();
    }
}
