@startuml

package "U I" {
  class Kakeibo
  {

  }

  class SpecifyCardStatement
  {

  }
}

package DataProcess {
  interface IConverter{
  }

  Class ConverterVPass{
  }

  Class ConverterOtherCompany{
  }

  class Statement{
  }

  class StatementFactory{
  }

  ' class Edit{
  '   +Editable() : bool
  '   +Edit() : CardCompanies
  ' }
}

package DataBase {
  class DataSet{}

  class StatementDataSet{
    
  }
}



SpecifyCardStatement --> StatementFactory

StatementFactory --> Statement

Statement --> IConverter

DataSet <|-- StatementDataSet

IConverter <|-- ConverterVPass
IConverter <|-- ConverterOtherCompany

@enduml